fix: bottom player padding on ios

--- a/src/components/BottomLivePlayer/BottomLivePlayer.css
+++ b/src/components/BottomLivePlayer/BottomLivePlayer.css
@@ -36,3 +36,7 @@
     top: 50%;
     transform: translateY(-50%);
 }
+
+.bottom-toolbar {
+    --border-width: 0 !important;
+}
